--- a/style_r.css
+++ b/style_r.css
@@ -68,7 +68,8 @@ footer{
 
 @media screen and (max-width: 425px){
   header{
-    width: 100%;
+    /*width: 100%;*/
+    width: 425px;
   }
 
   main{
