--- a/style_r.css
+++ b/style_r.css
@@ -68,8 +68,8 @@ footer{
 
 @media screen and (max-width: 425px){
   header{
-    /*width: 100%;*/
-    width: 425px;
+    width: 100%;
+
   }
 
   main{
@@ -88,6 +88,7 @@ footer{
     margin-bottom: 0;
     margin-right: auto;
   }
+
 
   footer{
     width: 100%;
